--- a/Demo/index.html
+++ b/Demo/index.html
@@ -14,6 +14,10 @@
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/png" href="../Assets/Favicon/favicon.png">
 
+	<!-- Fonts -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
 	<!-- CSS styling -->
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 	<link rel="stylesheet" type="text/css" href="../CSS/hegel.css">
