--- a/Demo/index.html
+++ b/Demo/index.html
@@ -16,7 +16,7 @@
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,800;1,400;1,600;1,800&display=swap" rel="stylesheet"> 
 
 	<!-- CSS styling -->
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
@@ -135,7 +135,7 @@
 			<div class="card col-span-2">
 				<div class="heading">Paragraphs</div>
 				<p class="drop-caps">
-					Paragraphs are formatted to have a 1.5em line-height, for best readability. For 
+					Paragraphs are formatted to have a 1.7em line-height, for best readability. For 
 					text, either use paragraph tags, or apply the text tag. This is an example of a 
 					drop-caps paragraph.
 				</p>
